<resources>
    <string name="app_name">LDS Callings</string>
    <string name="version">0.1</string>
    <string name="company">LDS Community Developers</string>
    <string name="title_calling_detail">Calling Detail</string>
    <string name="title_create_calling">Create Calling</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">Application Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_callings">In Progress</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="list_display_options_view">View By</string>
    <string name="list_display_options_organization">Organization</string>
    <string name="list_display_options_individual">Individual</string>
    <string name="list_display_options_filter">Filter By Status</string>
    <string name="list_display_options_proposed">Proposed</string>
    <string name="list_display_options_approved">Approved</string>
    <string name="list_display_options_extended">Extended</string>
    <string name="update_lds_org">Calling Actions</string>
    <string name="lcr_menu_header">Leader Clerk Resources</string>
    <string name="release_current_in_lcr">Release current in lds.org</string>
    <string name="finalize_calling_in_lcr">Finalize change in lds.org</string>
    <string name="update_calling_in_lcr">Update Calling in lds.org</string>
    <string name="delete_calling_in_lcr">Remove Calling in LCR</string>
    <string name="delete_calling_in_workflow">Remove Workflow Item</string>
    <string name="delete_calling">Delete Calling</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="setting_header">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sync">Sync</string>
    <string name="notes">Notes</string>
    <string name="phone">Phone</string>
    <string name="cell_phone">Cell</string>
    <string name="home">Home</string>
    <string name="household">Household</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="no_phone_number">No Phone Number</string>
    <string name="no_email_address">No Email Address</string>
    <string name="no_address">No Address</string>
    <string name="currently_called">Currently Called</string>
    <string name="select_status">Select Status</string>
    <string name="member_lookup">Member Lookup</string>
    <string name="search_filters">Search Filters</string>
    <string name="callings">Callings</string>
    <string name="time_in_calling">Time in Calling</string>
    <string name="twelve_to_seventeen">12&#8211;17</string>
    <string name="eighteen_plus">18+</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="priesthood">Priesthood</string>
    <string name="high_priest">High Priest</string>
    <string name="elder">Elder</string>
    <string name="priest">Priest</string>
    <string name="teacher">Teacher</string>
    <string name="deacon">Deacon</string>
    <string name="church_class">Class</string>
    <string name="relief_society">Relief Society</string>
    <string name="laurel">Laurel</string>
    <string name="mia_maid">Mia Maid</string>
    <string name="beehive">Beehive</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three_plus">3+</string>
    <string name="done">Done</string>
    <string name="plus_months">+ Month(s)</string>
    <string name="plus_years">+ Year(s)</string>
    <string name="saving_error">There was a problem saving your changes.</string>
    <string name="items_saved">Your changes have been saved</string>
    <string name="warning">Warning</string>
    <string name="warning_update_message">This will record %1$s as %2$s in LCR. This will make the change official and public. </string>
    <string name="warning_update_release_message">This will record %1$s and release %2$s as %3$s in LCR. This will make the change official and public.  This should only be done after the individuals have been sustained and released in Sacrament Meeting. Do you want to record the release on lds.org?</string>
    <string name="warning_release_message">%1$s will be released as %2$s on lds.org (LCR). This will make the release public (it will appear in lds.org sites, LDS Tools, etc.). Generally this should only be done after the individual has been released in Sacrament Meeting. Do you want to record the release on lds.org?</string>
    <string name="warning_delete_lcr_message">%1$s will be released as %2$s and delete the calling on lds.org (LCR). This will make the release public (it will appear in lds.org sites, LDS Tools, etc.). Generally this should only be done after the individual has been released in Sacrament Meeting. Do you want to record the release on lds.org?</string>
    <string name="warning_delete_message">This will delete the calling. Do you want to continue?</string>
    <string name="error_update_Message">You have selected a member that does not meet the requirements for the calling selected.  You may not be able to save these changes in LCR</string>
    <string name="error_saving_changes">There was an error saving the changes.  Would you like to undo all your changes and return to the calling list?</string>
    <string name="account_unit_number_no_match">The Unit Number was found in the google account you selected.  Please use or create an account that has your unit number in the email address. i.e. callingworkflow.12345@gmail.com</string>
    <string name="action_settings">setting</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="login_heading">LDS User Info</string>
    <string name="auth_confirm">Connect</string>
    <string name="title_activity_position_detail">Position Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found">Not Found</string>
    <string name="new_calling_label_position">Select Calling</string>
    <string name="new_calling_label_proposed">Select Person for Calling</string>
    <string name="new_calling_saved">Calling Created</string>
    <string name="new_calling_failed">Save Failed - please try again later</string>
    <string name="navigation_drawer_orgs">Organizations</string>
    <string name="navigation_drawer_directory">Directory</string>
    <string name="months">months</string>
    <string name="filters_heading">View By</string>
    <string name="calling_filters_confirm">Done</string>
    <string name="calling_filters_orgs_heading">Organization</string>
    <string name="calling_filters_status_heading">Calling Status</string>
    <string name="calling_filters_heading">View By</string>
    <string name="proposed_calling_with_status">%1$s (%2$s)</string>
    <string name="current_calling_with_duration">%1$s (%2$d months)</string>
    <string name="additional_lines_sum">%1$d more…</string>
    <string name="calling_changed_message">This calling has been changed in LCR. %1$s and likely should be deleted.</string>
    <string name="equivalent_deleted_explanation"> It appears that this calling has been removed from LCR</string>
    <string name="equivalent_potential_and_actual_explaination">It appears that this assignment has been finalized in LCR </string>
    <string name="title_activity_ldsaccount">LDS Account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in and Save</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="action_sign_out">Sign out of Google</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_signed_in_format">Signed in as: %s</string>
    <string name="action_signed_in">Signed in</string>
    <string name="action_signing_in">Signing in…</string>
    <string name="action_signed_out">Signed out</string>
    <string name="action_signed_in_err">"Error: please try again."</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Please check the password</string>
    <string name="error_incorrect_username">Please check the username</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Permissions are needed for this app to function correctly</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lds_credentials">LDS Credentials</string>
    <string name="sync_options">Sharing/Sync Options</string>
    <string name="edit_calling_status">Edit Calling Status</string>
    <string name="calling_status_edit_disclaimer">Please select the statuses you want to be displayed for the calling edit and create status options. If you do not have any selected, the system will use all of them by default.</string>
    <string name="title_activity_status_edit">Edit Status</string>
    <string name="manage_data">Manage Data</string>
    <string name="conflict_info_title">Missing Organization</string>
    <string name="conflict_info_delete_text">Remove</string>
    <string name="conflict_info_dismiss_text">Keep for now</string>
    <string name="conflict_understand_agreement">This organization can be removed.</string>
    <string name="org_conflict_warning">%1$s no longer exists on lds.org and should be removed, but there are outstanding changes in some callings. If these proposed changes are no longer needed you can remove the organization with the "Remove" button.  If you want to review the callings with outstanding changes you can choose "keep for now".</string>
    <string name="org_failed_to_delete">The org failed to delete.</string>
    <string name="org_deleted_successfully">The org was delete successfully.</string>
    <string name="unknown_member">Unknown Member</string>
    <string name="resync_data">Refresh LDS Data</string>
    <string name="google_drive">Google Drive</string>
    <string name="title_google_settings">Google Account Management</string>
    <string name="reset_data">Reset Data</string>
    <string name="load_data">Load Data</string>
    <string name="login_success">Log In Successful</string>
    <string name="logout_successful">Logged Out</string>
    <string name="logout_failed">Failed to logout</string>
    <string name="reset_usage_warning">This option is only to correct errors in individual organizations. If you are experiencing errors and unable to view certain organizations this option may correct it. It will destroy any in process calling data for the organization, and replace it with existing callings from lds.org. Do you want to select which organizations need reset?</string>
    <string name="confirm_reset_warning">This will delete all in process calling data for the selected organizations. It will not affect any data on lds.org. This action cannot be undone. Are you sure you want to proceed?</string>
    <string name="missing_requirement_warning">You have selected a member that does not meet the requirements for the calling selected. You may not be able to save these changes in LCR.</string>
</resources>