<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orgs"
            android:fontFamily="@font/roboto"
            android:title="@string/navigation_drawer_orgs" />
        <item
            android:id="@+id/nav_callings"
            android:fontFamily="@font/roboto"
            android:title="@string/navigation_drawer_callings" />
        <item
            android:id="@+id/nav_directory"
            android:fontFamily="@font/roboto"
            android:title="@string/navigation_drawer_directory" />
        <item
            android:id="@+id/nav_settings"
            android:fontFamily="@font/roboto"
            android:title="@string/navigation_drawer_settings">
        </item>
        <item
            android:id="@+id/nav_about"
            android:fontFamily="@font/roboto"
            android:title="@string/navigation_drawer_about" />
    </group>

</menu>
