<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/list_item_spacing_half"
    android:orientation="vertical"
    tools:context="org.ldscd.callingworkflow.display.LeaderClerkResourceDialogFragment"
    tools:listitem="@layout/fragment_leaderclerkresource_dialog_item">
    <TextView
        android:id="@+id/lcr_interaction_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/app_theme_color"
        android:textColor="@color/white"
        android:ems="40"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/lcr_menu_header"/>

    <Button
        android:text="@string/release_current_in_lcr"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_release_current_in_lcr" />
    <Button
        android:text="@string/update_calling_in_lcr"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_update_calling_in_lcr" />
    <Button
        android:text="@string/delete_calling"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_delete_calling_in_lcr" />

</LinearLayout>
